get total number of guests and total number of nights for each booking

--- a/eda_merged.ipynb
+++ b/eda_merged.ipynb
@@ -1519,6 +1519,87 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "2. Get full arrival date by combining year, month, and day"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 51,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Combine year, month, day into 1 column in datetime format ('full_arrival_date')\n",
+        "df['day']=df['arrival_date'].copy()\n",
+        "df['month']=df['arrival_month'].copy()\n",
+        "df['year']=df['arrival_year'].copy()\n",
+        "df['full_arrival_date']=pd.to_datetime(df[['year','month','day']],format='%Y-%M-%D',errors='coerce')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "3. Get total number of guests"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 52,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df['total_guests']=df['no_of_adults']+df['no_of_children']"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "4. Get total number of nights for each booking"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 54,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df['total_nights']=df['no_of_weekend_nights']+df['no_of_week_nights']"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 53,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Index(['no_of_adults', 'no_of_children', 'no_of_weekend_nights',\n",
+              "       'no_of_week_nights', 'type_of_meal_plan', 'required_car_parking_space',\n",
+              "       'room_type_reserved', 'lead_time', 'arrival_year', 'arrival_month',\n",
+              "       'arrival_date', 'market_segment_type', 'repeated_guest',\n",
+              "       'no_of_previous_cancellations', 'no_of_previous_bookings_not_canceled',\n",
+              "       'avg_price_per_room', 'no_of_special_requests', 'booking_status',\n",
+              "       'binary_cancellation', 'cancellation_rate', 'day', 'month', 'year',\n",
+              "       'full_arrival_date', 'total_guests'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "execution_count": 53,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Show all columns, including all added columns\n",
+        "df.columns"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "l3jy8KVSSDaX"
       },
@@ -1944,21 +2025,6 @@
       },
       "source": [
         "### **Time Series**"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "x9ps_GuiKvrD"
-      },
-      "outputs": [],
-      "source": [
-        "# Combine year, month, day into 1 column in datetime format ('full_arrival_date')\n",
-        "df['day']=df['arrival_date'].copy()\n",
-        "df['month']=df['arrival_month'].copy()\n",
-        "df['year']=df['arrival_year'].copy()\n",
-        "df['full_arrival_date']=pd.to_datetime(df[['year','month','day']],format='%Y-%M-%D',errors='coerce')"
       ]
     },
     {
