determine seasonality from arrival month

--- a/eda_merged.ipynb
+++ b/eda_merged.ipynb
@@ -1570,8 +1570,54 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "5. Get seasonality from arrival month"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 70,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Autumn    12908\n",
+              "Summer     9936\n",
+              "Spring     7692\n",
+              "Winter     5739\n",
+              "Name: season, dtype: int64"
+            ]
+          },
+          "execution_count": 70,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "def map_to_season(month):\n",
+        "    if month in [12,1,2]:\n",
+        "        return 'Winter'\n",
+        "    elif month in [3,4,5]:\n",
+        "        return 'Spring'\n",
+        "    elif month in [6,7,8]:\n",
+        "        return 'Summer'\n",
+        "    elif month in [9,10,11]:\n",
+        "        return 'Autumn'\n",
+        "    else:\n",
+        "        return 'Unknown'  # Handle any unexpected values\n",
+        "\n",
+        "# Apply mapping function to create a new 'season' column\n",
+        "df['season'] = df['arrival_month'].apply(map_to_season)\n",
+        "df['season']=df['season'].astype('category')\n",
+        "df['season'].value_counts()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 69,
       "metadata": {},
       "outputs": [
         {
@@ -1584,11 +1630,11 @@
               "       'no_of_previous_cancellations', 'no_of_previous_bookings_not_canceled',\n",
               "       'avg_price_per_room', 'no_of_special_requests', 'booking_status',\n",
               "       'binary_cancellation', 'cancellation_rate', 'day', 'month', 'year',\n",
-              "       'full_arrival_date', 'total_guests'],\n",
+              "       'full_arrival_date', 'total_guests', 'total_nights', 'season'],\n",
               "      dtype='object')"
             ]
           },
-          "execution_count": 53,
+          "execution_count": 69,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1609,14 +1655,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 55,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['no_of_adults', 'no_of_children', 'no_of_weekend_nights', 'no_of_week_nights', 'lead_time', 'arrival_date', 'no_of_previous_cancellations', 'no_of_previous_bookings_not_canceled', 'avg_price_per_room', 'no_of_special_requests']\n"
+            "['no_of_adults', 'no_of_children', 'no_of_weekend_nights', 'no_of_week_nights', 'lead_time', 'arrival_date', 'no_of_previous_cancellations', 'no_of_previous_bookings_not_canceled', 'avg_price_per_room', 'no_of_special_requests', 'cancellation_rate', 'day', 'total_guests', 'total_nights']\n"
           ]
         }
       ],
@@ -1634,14 +1680,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['type_of_meal_plan', 'required_car_parking_space', 'room_type_reserved', 'arrival_year', 'arrival_month', 'market_segment_type', 'repeated_guest', 'booking_status', 'binary_cancellation']\n"
+            "['type_of_meal_plan', 'required_car_parking_space', 'room_type_reserved', 'arrival_year', 'arrival_month', 'market_segment_type', 'repeated_guest', 'booking_status', 'binary_cancellation', 'month', 'year']\n"
           ]
         }
       ],
