use stratified split to preserve proportions in training set

--- a/eda_merged_092823.ipynb
+++ b/eda_merged_092823.ipynb
@@ -72,11 +72,11 @@
       "no display found. Using non-interactive Agg backend\n",
       "Requirement already satisfied: imblearn in /opt/miniconda3/envs/ADS500B/lib/python3.10/site-packages (0.0)\n",
       "Requirement already satisfied: imbalanced-learn in /opt/miniconda3/envs/ADS500B/lib/python3.10/site-packages (from imblearn) (0.11.0)\n",
-      "Requirement already satisfied: scikit-learn>=1.0.2 in /opt/miniconda3/envs/ADS500B/lib/python3.10/site-packages (from imbalanced-learn->imblearn) (1.1.1)\n",
       "Requirement already satisfied: scipy>=1.5.0 in /opt/miniconda3/envs/ADS500B/lib/python3.10/site-packages (from imbalanced-learn->imblearn) (1.8.1)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in /opt/miniconda3/envs/ADS500B/lib/python3.10/site-packages (from imbalanced-learn->imblearn) (1.3.2)\n",
       "Requirement already satisfied: numpy>=1.17.3 in /opt/miniconda3/envs/ADS500B/lib/python3.10/site-packages (from imbalanced-learn->imblearn) (1.22.3)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /opt/miniconda3/envs/ADS500B/lib/python3.10/site-packages (from imbalanced-learn->imblearn) (3.1.0)\n",
-      "Requirement already satisfied: joblib>=1.1.1 in /opt/miniconda3/envs/ADS500B/lib/python3.10/site-packages (from imbalanced-learn->imblearn) (1.3.2)\n"
+      "Requirement already satisfied: scikit-learn>=1.0.2 in /opt/miniconda3/envs/ADS500B/lib/python3.10/site-packages (from imbalanced-learn->imblearn) (1.1.1)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /opt/miniconda3/envs/ADS500B/lib/python3.10/site-packages (from imbalanced-learn->imblearn) (3.1.0)\n"
      ]
     }
    ],
@@ -926,7 +926,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68ecfbd023454de9abf76acc63271ab0",
+       "model_id": "44b9a2fd5e1e4ddb8451f3b35d11f5ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -963,7 +963,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee2476e18d0d4bf4bf790319ecfe7b11",
+       "model_id": "4b3c7c4eea9241d7bafb0d05684f34c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1051,7 +1051,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8cb6a4ad5301448ea73114bbb0c8f8b9",
+       "model_id": "abcb7032812f4b439fd41a09585c1fba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1088,7 +1088,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff4c1349702f46668898b6c1402480ce",
+       "model_id": "ccf0f4fe2f7e4b3abe4c8876c6d54b29",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1176,7 +1176,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "086f3a039e3640428ca79d475cf99e94",
+       "model_id": "075fbeb2c2304376bf7e0f439043b451",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1213,7 +1213,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "786aafd7ba2e432dacd95aaaef0866c6",
+       "model_id": "5a7fce76833b4071af6220b6d1755618",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1311,7 +1311,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b80f4ffa6dc94769b48270d2b95d9b11",
+       "model_id": "1e1249efc96f46fdb0b5433347d7b296",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1348,7 +1348,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "52f1ff6d6fa4472b933fa942f6f8dffe",
+       "model_id": "2a07973b7371435a916e25080b63c95e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1438,7 +1438,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb8c803150ce4b98aa882093eccaadb7",
+       "model_id": "b1daa62d1be247608b944133cf399327",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1475,7 +1475,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3742db8f2d846a1b253ec045d161d74",
+       "model_id": "a5ef6e4e491349139ccc7b9974184a8f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1568,7 +1568,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6f5e7054b81466ab28c70b6cdbee37a",
+       "model_id": "3cadb8b301e541e582a6410179065e43",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1605,7 +1605,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7dff03f5ad84b20a189a1c8bc8f573e",
+       "model_id": "d034f082cb3445ee93f137de09031e17",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1689,7 +1689,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "59a6bb55c4de43f0996e239083a4bb0a",
+       "model_id": "d7f9ab24497941fca6b5d48a13f6b29f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1726,7 +1726,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c3ef4e3a606466e8e9c4743b56c2bf2",
+       "model_id": "62b512d805a14006a62f307561764228",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1898,7 +1898,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7c072b6b308468a8fb30c721b5bc915",
+       "model_id": "5c3c54cb7cef4ff9bad632ef5cb6b398",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1937,7 +1937,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7c072b6b308468a8fb30c721b5bc915",
+       "model_id": "5c3c54cb7cef4ff9bad632ef5cb6b398",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2016,7 +2016,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7c072b6b308468a8fb30c721b5bc915",
+       "model_id": "5c3c54cb7cef4ff9bad632ef5cb6b398",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2075,7 +2075,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7c072b6b308468a8fb30c721b5bc915",
+       "model_id": "5c3c54cb7cef4ff9bad632ef5cb6b398",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2174,7 +2174,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf1b6f3d96c2436f9e4f8e108227fd26",
+       "model_id": "d0be31442ec043e199ba7ca4fac1265f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2211,7 +2211,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b3a44aceea740289728d5e819d7deca",
+       "model_id": "1ef20bf96a1e449ab2ffea489d97a372",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2363,7 +2363,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5febf401b544631bfcc2833f8d4ba70",
+       "model_id": "a07a9f9d36844afc8bce2ed1fade0450",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2400,7 +2400,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9063d7915508483e8739e52bfaa31bd8",
+       "model_id": "cbd67caa89dd475b83ec8ed76130ff53",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2524,7 +2524,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b891ae44647a4e6a9cd3bd0104870edb",
+       "model_id": "ab828873ccef463cb52eaa96580f990d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2569,7 +2569,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b948bd04a2624b8a936a6d0810f0f1f3",
+       "model_id": "c272e71b09f0453087516b17dc4c6268",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2628,7 +2628,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b948bd04a2624b8a936a6d0810f0f1f3",
+       "model_id": "c272e71b09f0453087516b17dc4c6268",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2698,7 +2698,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd4f6a40aedb4785990e6d65b3c59872",
+       "model_id": "ec2689e34eae4ceda99e1c792ffbe625",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2735,7 +2735,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3adc206dca24e75a2640e1d0e9d9d91",
+       "model_id": "90d5210fc8954f7c92bf9db1af5f3f2f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2812,7 +2812,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f473564d52384cc5ae52d8e07bc9b561",
+       "model_id": "692d718cfa9e4d79895ca21e50a2eaae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2849,7 +2849,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b2b2b2d23ea48d993b089758b5217d8",
+       "model_id": "0890e4c9a2a34078947f4e86749c0251",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2955,7 +2955,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2272e6ae6b54511936399ec6ee2ad20",
+       "model_id": "8818c4e7f66744938ea25ed071341eaf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2992,7 +2992,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb25508bf0b544cbac89d046fb998560",
+       "model_id": "aafa506590874ae2bd83e7042556bd5e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3035,7 +3035,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74f6bd2c86e147d9bf96daa2000b8eb9",
+       "model_id": "c3ca11f6a0dd4dea8c9883a0e6df8f30",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3249,7 +3249,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb5108a50a134f58ad9fc4ea17fa77fd",
+       "model_id": "4e1d5bca200343358f8927a61e5bc3e3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3303,7 +3303,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e6050bd2cb343f7a0b6e037d73d317c",
+       "model_id": "8bc58ecdd4cb4c3db6b38a6514662216",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3859,7 +3859,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba2d719f098647dc8945abad4d05f01f",
+       "model_id": "284f58c31aa44dc5a2fb70c7ab59dfd2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -4263,7 +4263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 96,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -4273,20 +4273,29 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0    24390\n",
-       "1    11885\n",
-       "Name: book_binary, dtype: int64"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    24390\n",
+      "1    11885\n",
+      "Name: book_binary, dtype: int64\n",
+      "\n",
+      " 0    0.672364\n",
+      "1    0.327636\n",
+      "Name: book_binary, dtype: float64\n"
+     ]
     }
    ],
    "source": [
-    "df['book_binary'].value_counts()"
+    "print(df['book_binary'].value_counts())\n",
+    "print('\\n', df['book_binary'].value_counts()/len(df))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The original dataset is imbalanced, with 33% (11885) cancellations and 67% (24390) non-cancellations. A stratified split will be used to create the training set to preserve these proportions. "
    ]
   },
   {
@@ -4379,7 +4388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -4399,7 +4408,7 @@
     "#Resplit data\n",
     "X = df[all_vars]\n",
     "y = df['book_binary']\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size = 27000, random_state=1)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size = 27000, stratify=y, random_state=1)\n",
     "X_val, X_test, y_val, y_test = train_test_split(X_test, y_test, train_size=.50, random_state=1)\n",
     "#X_train, X_test, y_train, y_test = train_test_split(X, y, train_size = 27000, random_state=1)\n",
     "#X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, train_size=15000, random_state=1)\n",
@@ -4410,6 +4419,29 @@
     "print(y_val.shape)\n",
     "print(X_test.shape)\n",
     "print(y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0.67237\n",
+       "1    0.32763\n",
+       "Name: book_binary, dtype: float64"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Confirm stratified split \n",
+    "y_train.value_counts()/len(y_train)"
    ]
   },
   {
