--- a/eda_merged_092823.ipynb
+++ b/eda_merged_092823.ipynb
@@ -4446,13 +4446,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    18154\n",
+       "0    18154\n",
+       "Name: book_binary, dtype: int64"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "ros=RandomOverSampler(random_state=1)\n",
+    "X_train_resampled, y_train_resampled=ros.fit_resample(X_train, y_train)\n",
+    "\n",
+    "# Check proportions \n",
+    "y_train_resampled.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Separate cancels and non-cancels\n",
-    "cancel = y_train[y_train == 1]\n",
-    "no_cancel = y_train[y_train == 0]"
+    "#cancel = y_train[y_train == 1]\n",
+    "# no_cancel = y_train[y_train == 0]"
    ]
   },
   {
@@ -4462,7 +4489,7 @@
    "outputs": [],
    "source": [
     "#Take random sample of 4929 non-cancellations\n",
-    "no_cancel_samp = no_cancel.sample(n = len(cancel), random_state = 1)"
+    "#no_cancel_samp = no_cancel.sample(n = len(cancel), random_state = 1)"
    ]
   },
   {
@@ -4472,7 +4499,7 @@
    "outputs": [],
    "source": [
     "#Combine 4929 cancellations with sample of 4929 non-cancellations\n",
-    "balance_samp = pd.concat([cancel, no_cancel_samp])"
+    "#balance_samp = pd.concat([cancel, no_cancel_samp])"
    ]
   },
   {
@@ -4495,7 +4522,7 @@
    ],
    "source": [
     "#Verify balance of new training set\n",
-    "balance_samp.value_counts()"
+    "#balance_samp.value_counts()"
    ]
   },
   {
@@ -4505,7 +4532,7 @@
    "outputs": [],
    "source": [
     "#Merge new list of indices with the rest of features\n",
-    "balance_df = pd.merge(X_train, balance_samp[balance_samp.index.isin(X_train.index)],left_index=True, right_index=True)"
+    "#balance_df = pd.merge(X_train, balance_samp[balance_samp.index.isin(X_train.index)],left_index=True, right_index=True)"
    ]
   },
   {
@@ -4515,42 +4542,18 @@
    "outputs": [],
    "source": [
     "#Create new input and output vectors for training data\n",
-    "X_train_bal = pd.DataFrame(balance_df.loc[:, balance_df.columns != 'book_binary'])\n",
-    "y_train_bal = balance_df[['book_binary']]"
+    "#X_train_bal = pd.DataFrame(balance_df.loc[:, balance_df.columns != 'book_binary'])\n",
+    "#y_train_bal = balance_df[['book_binary']]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 98,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'past_cancellation'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m/opt/miniconda3/envs/ADS500B/lib/python3.10/site-packages/pandas/core/indexes/base.py:3621\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3620\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 3621\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[1;32m   3622\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/ADS500B/lib/python3.10/site-packages/pandas/_libs/index.pyx:136\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/ADS500B/lib/python3.10/site-packages/pandas/_libs/index.pyx:163\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5198\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5206\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'past_cancellation'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m/Users/viviando/Desktop/MSADS/ADS505_Notebooks/ADS505_finalproject/ads505/eda_merged_092823.ipynb Cell 134\u001b[0m line \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/viviando/Desktop/MSADS/ADS505_Notebooks/ADS505_finalproject/ads505/eda_merged_092823.ipynb#Y246sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m tr_nums_bal \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(all_pipe\u001b[39m.\u001b[39mfit_transform(X_train_bal))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/viviando/Desktop/MSADS/ADS505_Notebooks/ADS505_finalproject/ads505/eda_merged_092823.ipynb#Y246sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m tr_bis_bal \u001b[39m=\u001b[39m X_train_bal[bis]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/viviando/Desktop/MSADS/ADS505_Notebooks/ADS505_finalproject/ads505/eda_merged_092823.ipynb#Y246sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m X_train_bal \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame({\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/viviando/Desktop/MSADS/ADS505_Notebooks/ADS505_finalproject/ads505/eda_merged_092823.ipynb#Y246sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mSeg1\u001b[39m\u001b[39m'\u001b[39m: pd\u001b[39m.\u001b[39marray(tr_nums_bal[\u001b[39m0\u001b[39m]),\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/viviando/Desktop/MSADS/ADS505_Notebooks/ADS505_finalproject/ads505/eda_merged_092823.ipynb#Y246sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mSeg2\u001b[39m\u001b[39m'\u001b[39m: pd\u001b[39m.\u001b[39marray(tr_nums_bal[\u001b[39m1\u001b[39m]),\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/viviando/Desktop/MSADS/ADS505_Notebooks/ADS505_finalproject/ads505/eda_merged_092823.ipynb#Y246sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mSeg3\u001b[39m\u001b[39m'\u001b[39m: pd\u001b[39m.\u001b[39marray(tr_nums_bal[\u001b[39m2\u001b[39m]),\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/viviando/Desktop/MSADS/ADS505_Notebooks/ADS505_finalproject/ads505/eda_merged_092823.ipynb#Y246sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mSeason1\u001b[39m\u001b[39m'\u001b[39m: pd\u001b[39m.\u001b[39marray(tr_nums_bal[\u001b[39m3\u001b[39m]),\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/viviando/Desktop/MSADS/ADS505_Notebooks/ADS505_finalproject/ads505/eda_merged_092823.ipynb#Y246sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mSeason2\u001b[39m\u001b[39m'\u001b[39m: pd\u001b[39m.\u001b[39marray(tr_nums_bal[\u001b[39m4\u001b[39m]),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/viviando/Desktop/MSADS/ADS505_Notebooks/ADS505_finalproject/ads505/eda_merged_092823.ipynb#Y246sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mSeason3\u001b[39m\u001b[39m'\u001b[39m: pd\u001b[39m.\u001b[39marray(tr_nums_bal[\u001b[39m5\u001b[39m]),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/viviando/Desktop/MSADS/ADS505_Notebooks/ADS505_finalproject/ads505/eda_merged_092823.ipynb#Y246sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mSeason4\u001b[39m\u001b[39m'\u001b[39m: pd\u001b[39m.\u001b[39marray(tr_nums_bal[\u001b[39m6\u001b[39m]),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/viviando/Desktop/MSADS/ADS505_Notebooks/ADS505_finalproject/ads505/eda_merged_092823.ipynb#Y246sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mLeadTime\u001b[39m\u001b[39m'\u001b[39m : pd\u001b[39m.\u001b[39marray(tr_nums_bal[\u001b[39m7\u001b[39m]),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/viviando/Desktop/MSADS/ADS505_Notebooks/ADS505_finalproject/ads505/eda_merged_092823.ipynb#Y246sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mTotalPrice\u001b[39m\u001b[39m'\u001b[39m : pd\u001b[39m.\u001b[39marray(tr_nums_bal[\u001b[39m8\u001b[39m]),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/viviando/Desktop/MSADS/ADS505_Notebooks/ADS505_finalproject/ads505/eda_merged_092823.ipynb#Y246sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mRequests\u001b[39m\u001b[39m'\u001b[39m : pd\u001b[39m.\u001b[39marray(tr_nums_bal[\u001b[39m9\u001b[39m]),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/viviando/Desktop/MSADS/ADS505_Notebooks/ADS505_finalproject/ads505/eda_merged_092823.ipynb#Y246sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mGuests\u001b[39m\u001b[39m'\u001b[39m : pd\u001b[39m.\u001b[39marray(tr_nums_bal[\u001b[39m10\u001b[39m]),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/viviando/Desktop/MSADS/ADS505_Notebooks/ADS505_finalproject/ads505/eda_merged_092823.ipynb#Y246sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mPark\u001b[39m\u001b[39m'\u001b[39m : pd\u001b[39m.\u001b[39marray(tr_bis_bal[\u001b[39m'\u001b[39m\u001b[39mrequired_car_parking_space\u001b[39m\u001b[39m'\u001b[39m]),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/viviando/Desktop/MSADS/ADS505_Notebooks/ADS505_finalproject/ads505/eda_merged_092823.ipynb#Y246sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mMeal\u001b[39m\u001b[39m'\u001b[39m : pd\u001b[39m.\u001b[39marray(tr_bis_bal[\u001b[39m'\u001b[39m\u001b[39mmeal_plan\u001b[39m\u001b[39m'\u001b[39m]),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/viviando/Desktop/MSADS/ADS505_Notebooks/ADS505_finalproject/ads505/eda_merged_092823.ipynb#Y246sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mRoom\u001b[39m\u001b[39m'\u001b[39m : pd\u001b[39m.\u001b[39marray(tr_bis_bal[\u001b[39m'\u001b[39m\u001b[39mroom_type\u001b[39m\u001b[39m'\u001b[39m]),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/viviando/Desktop/MSADS/ADS505_Notebooks/ADS505_finalproject/ads505/eda_merged_092823.ipynb#Y246sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mRepeatGuest\u001b[39m\u001b[39m'\u001b[39m : pd\u001b[39m.\u001b[39marray(tr_bis_bal[\u001b[39m'\u001b[39m\u001b[39mrepeated_guest\u001b[39m\u001b[39m'\u001b[39m]),\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/viviando/Desktop/MSADS/ADS505_Notebooks/ADS505_finalproject/ads505/eda_merged_092823.ipynb#Y246sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mPastCancel\u001b[39m\u001b[39m'\u001b[39m : pd\u001b[39m.\u001b[39marray(tr_bis_bal[\u001b[39m'\u001b[39;49m\u001b[39mpast_cancellation\u001b[39;49m\u001b[39m'\u001b[39;49m])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/viviando/Desktop/MSADS/ADS505_Notebooks/ADS505_finalproject/ads505/eda_merged_092823.ipynb#Y246sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m })\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/ADS500B/lib/python3.10/site-packages/pandas/core/frame.py:3505\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3503\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m   3504\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3505\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[1;32m   3506\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3507\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/ADS500B/lib/python3.10/site-packages/pandas/core/indexes/base.py:3623\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3621\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3622\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[0;32m-> 3623\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[1;32m   3624\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[1;32m   3625\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3626\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3627\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3628\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'past_cancellation'"
-     ]
-    }
-   ],
    "source": [
     "#Apply transformation pipeline to balanced training data\n",
-    "tr_nums_bal = pd.DataFrame(all_pipe.fit_transform(X_train_bal))\n",
-    "tr_bis_bal = X_train_bal[bis]\n",
-    "X_train_bal = pd.DataFrame({\n",
+    "#tr_nums_bal = pd.DataFrame(all_pipe.fit_transform(X_train_bal))\n",
+    "#tr_bis_bal = X_train_bal[bis]\n",
+    "#X_train_bal = pd.DataFrame({\n",
     "    'Seg1': pd.array(tr_nums_bal[0]),\n",
     "    'Seg2': pd.array(tr_nums_bal[1]),\n",
     "    'Seg3': pd.array(tr_nums_bal[2]),\n",
@@ -4576,11 +4579,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_bal['Park'] = X_train_bal['Park'].astype('int64')\n",
-    "X_train_bal['Meal'] = X_train_bal['Meal'].astype('int64')\n",
-    "X_train_bal['Room'] = X_train_bal['Room'].astype('int64')\n",
-    "X_train_bal['RepeatGuest'] = X_train_bal['RepeatGuest'].astype('int64')\n",
-    "X_train_bal['PastCancel'] = X_train_bal['PastCancel'].astype('int64')"
+    "#X_train_bal['Park'] = X_train_bal['Park'].astype('int64')\n",
+    "#X_train_bal['Meal'] = X_train_bal['Meal'].astype('int64')\n",
+    "#X_train_bal['Room'] = X_train_bal['Room'].astype('int64')\n",
+    "#X_train_bal['RepeatGuest'] = X_train_bal['RepeatGuest'].astype('int64')\n",
+    "#X_train_bal['PastCancel'] = X_train_bal['PastCancel'].astype('int64')"
    ]
   },
   {
@@ -4591,7 +4594,7 @@
    },
    "outputs": [],
    "source": [
-    "X_train_bal.info()"
+    "#X_train_bal.info()"
    ]
   },
   {
@@ -4607,7 +4610,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_log_bal = X_train_bal.drop(['Seg1','Season1'], axis = 1)"
+    "#X_train_log_bal = X_train_bal.drop(['Seg1','Season1'], axis = 1)"
    ]
   },
   {
@@ -4625,10 +4628,10 @@
    },
    "outputs": [],
    "source": [
-    "X = df[all_vars]\n",
-    "y = df['book_binary']\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size = 27000, random_state=1)\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, train_size=15000, random_state=1)"
+    "#X = df[all_vars]\n",
+    "#y = df['book_binary']\n",
+    "#X_train, X_test, y_train, y_test = train_test_split(X, y, train_size = 27000, random_state=1)\n",
+    "#X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, train_size=15000, random_state=1)"
    ]
   },
   {
@@ -4643,7 +4646,7 @@
    },
    "outputs": [],
    "source": [
-    "X_train.shape, X_val.shape, X_test.shape"
+    "#X_train.shape, X_val.shape, X_test.shape"
    ]
   },
   {
@@ -4652,9 +4655,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tr_bis = X_train[bis]\n",
-    "val_bis = X_val[bis]\n",
-    "test_bis = X_test[bis]"
+    "#tr_bis = X_train[bis]\n",
+    "#val_bis = X_val[bis]\n",
+    "#test_bis = X_test[bis]"
    ]
   },
   {
@@ -4670,36 +4673,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "X_train = pd.DataFrame({\n",
-    "    'Seg1': pd.array(X_train[0]),\n",
-    "    'Seg2': pd.array(X_train[1]),\n",
-    "    'Seg3': pd.array(X_train[2]),\n",
-    "    'Season1': pd.array(X_train[3]),\n",
-    "    'Season2': pd.array(X_train[4]),\n",
-    "    'Season3': pd.array(X_train[5]),\n",
-    "    'Season4': pd.array(X_train[6]),\n",
-    "    'LeadTime' : pd.array(X_train[7]),\n",
-    "    'TotalPrice' : pd.array(X_train[8]),\n",
-    "    'Requests' : pd.array(X_train[9]),\n",
-    "    'Guests' : pd.array(X_train[10]),\n",
-    "    'Park' : pd.array(tr_bis['required_car_parking_space']),\n",
-    "    'Meal' : pd.array(tr_bis['meal_plan']),\n",
-    "    'Room' : pd.array(tr_bis['room_type']),\n",
-    "    'RepeatGuest' : pd.array(tr_bis['repeated_guest']),\n",
-    "    'PastCancel' : pd.array(tr_bis['past_cancellation'])\n",
-    "})"
+    "#X_train = pd.DataFrame({\n",
+    "#    'Seg1': pd.array(X_train[0]),\n",
+    "#    'Seg2': pd.array(X_train[1]),\n",
+    "#    'Seg3': pd.array(X_train[2]),\n",
+    "#    'Season1': pd.array(X_train[3]),\n",
+    "#    'Season2': pd.array(X_train[4]),\n",
+    "#    'Season3': pd.array(X_train[5]),\n",
+    "#    'Season4': pd.array(X_train[6]),\n",
+    "#    'LeadTime' : pd.array(X_train[7]),\n",
+    "#    'TotalPrice' : pd.array(X_train[8]),\n",
+    "#    'Requests' : pd.array(X_train[9]),\n",
+    "#    'Guests' : pd.array(X_train[10]),\n",
+    "#    'Park' : pd.array(tr_bis['required_car_parking_space']),\n",
+    "#    'Meal' : pd.array(tr_bis['meal_plan']),\n",
+    "#    'Room' : pd.array(tr_bis['room_type']),\n",
+    "#    'RepeatGuest' : pd.array(tr_bis['repeated_guest']),\n",
+    "#    'PastCancel' : pd.array(tr_bis['past_cancellation'])\n",
+    "#})"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "X_val = pd.DataFrame({\n",
     "    'Seg1': pd.array(X_val[0]),\n",
@@ -4722,10 +4721,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "X_val['Park'] = X_val['Park'].astype('int64')\n",
     "X_val['Meal'] = X_val['Meal'].astype('int64')\n",
@@ -4735,19 +4732,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "X_val.info()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "X_test = pd.DataFrame({\n",
     "    'Seg1': pd.array(X_test[0]),\n",
@@ -4775,10 +4768,8 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "X_test['Park'] = X_test['Park'].astype('int64')\n",
     "X_test['Meal'] = X_test['Meal'].astype('int64')\n",
@@ -4795,10 +4786,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "X_train_log = X_train.drop(['Seg1','Season1'], axis = 1)\n",
     "X_val_log = X_val.drop(['Seg1','Season1'], axis = 1)\n",
