--- a/eda_merged_100323_Halee.ipynb
+++ b/eda_merged_100323_Halee.ipynb
@@ -4525,7 +4525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -4542,20 +4542,20 @@
    "source": [
     "#ROC curve for logistic regression\n",
     "fpr, tpr, thresholds = roc_curve(y_val, log_l2_bal.predict(X_val_log))\n",
-    "auc = round(roc_auc_score(y_val, log_l2_bal.predict(X_val_log)), 4)\n",
-    "plt.plot(fpr,tpr,label=\"Logistic Regression, AUC=\"+str(auc))\n",
+    "auc_log = round(roc_auc_score(y_val, log_l2_bal.predict(X_val_log)), 4)\n",
+    "plt.plot(fpr,tpr,label=\"Logistic Regression, AUC=\"+str(auc_log))\n",
     "\n",
     "fpr, tpr, thresholds = roc_curve(y_val, tree_search.predict(X_val))\n",
-    "auc = round(roc_auc_score(y_val, tree_search.predict(X_val)), 4)\n",
-    "plt.plot(fpr,tpr,label=\"Boosted Tree, AUC=\"+str(auc))\n",
+    "auc_tree = round(roc_auc_score(y_val, tree_search.predict(X_val)), 4)\n",
+    "plt.plot(fpr,tpr,label=\"Boosted Tree, AUC=\"+str(auc_tree))\n",
     "\n",
     "fpr, tpr, thresholds = roc_curve(y_val, knn.predict(X_val))\n",
-    "auc = round(roc_auc_score(y_val, knn.predict(X_val)), 4)\n",
-    "plt.plot(fpr,tpr,label=\"K-Nearest Neighbors, AUC=\"+str(auc))\n",
+    "auc_knn = round(roc_auc_score(y_val, knn.predict(X_val)), 4)\n",
+    "plt.plot(fpr,tpr,label=\"K-Nearest Neighbors, AUC=\"+str(auc_knn))\n",
     "\n",
     "fpr, tpr, thresholds = roc_curve(y_val, nn.predict(X_val))\n",
-    "auc = round(roc_auc_score(y_val, nn.predict(X_val)), 4)\n",
-    "plt.plot(fpr,tpr,label=\"Neural Network, AUC=\"+str(auc))\n",
+    "auc_nn = round(roc_auc_score(y_val, nn.predict(X_val)), 4)\n",
+    "plt.plot(fpr,tpr,label=\"Neural Network, AUC=\"+str(auc_nn))\n",
     "\n",
     "\n",
     "plt.xlabel('False Positive Rate')\n",
@@ -4563,6 +4563,52 @@
     "plt.title('ROC Curves for Validation Data')\n",
     "plt.legend()\n",
     "plt.savefig('ROCs.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Validation Performance Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "╒═════════════════════╤══════════════════════════╤══════════════════════════╤════════════╤════════════════════╕\n",
+      "│ Model               │   Validation Sensitivity │   Validation Specificity │   Accuracy │   Area Under Curve │\n",
+      "╞═════════════════════╪══════════════════════════╪══════════════════════════╪════════════╪════════════════════╡\n",
+      "│ Logistic Regression │                 0.820663 │                 0.694095 │   0.736093 │             0.7619 │\n",
+      "├─────────────────────┼──────────────────────────┼──────────────────────────┼────────────┼────────────────────┤\n",
+      "│ Boosted Tree        │                 0.771333 │                 0.798215 │   0.789519 │             0.7848 │\n",
+      "├─────────────────────┼──────────────────────────┼──────────────────────────┼────────────┼────────────────────┤\n",
+      "│ K-Nearest Neighbors │                 0.732667 │                 0.818935 │   0.791029 │             0.7758 │\n",
+      "├─────────────────────┼──────────────────────────┼──────────────────────────┼────────────┼────────────────────┤\n",
+      "│ Neural Network      │                 0.805068 │                 0.770248 │   0.781803 │             0.788  │\n",
+      "╘═════════════════════╧══════════════════════════╧══════════════════════════╧════════════╧════════════════════╛\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tabulate import tabulate\n",
+    "val_performance = [\n",
+    "{'Model': 'Logistic Regression', 'Validation Sensitivity': log_sens_bal, 'Validation Specificity':log_spec_bal, \n",
+    " 'Accuracy': log_acc_bal, 'Area Under Curve':auc_log},\n",
+    "    {'Model': 'Boosted Tree', 'Validation Sensitivity': tree_sens_bal, 'Validation Specificity':tree_spec_bal, \n",
+    " 'Accuracy': tree_acc_bal, 'Area Under Curve':auc_tree},\n",
+    "    {'Model': 'K-Nearest Neighbors', 'Validation Sensitivity': knn_sens_bal, 'Validation Specificity':knn_spec_bal, \n",
+    " 'Accuracy': knn_acc_bal, 'Area Under Curve':auc_knn},\n",
+    "    {'Model': 'Neural Network', 'Validation Sensitivity': nn_sens_bal, 'Validation Specificity':nn_spec_bal, \n",
+    " 'Accuracy': nn_acc_bal, 'Area Under Curve':auc_nn}]\n",
+    "table = tabulate(val_performance, headers='keys', tablefmt='fancy_grid')\n",
+    "# Display the comparison table\n",
+    "print(table)"
    ]
   },
   {
@@ -4621,7 +4667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -4633,21 +4679,11 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     "#Lift curve for logistic regression on test data\n",
     "plot_lift_curve(y_test, log_l2_bal.predict_proba(X_test_log), title = 'Lift Curve for Logistic Regression')\n",
-    "plt.show()\n",
     "plt.savefig('LogLift.png')"
    ]
   },
@@ -4708,7 +4744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -4720,21 +4756,11 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     "#Lift curve for neural network on test data\n",
     "plot_lift_curve(y_test, nn.predict_proba(X_test), title = 'Lift Curve for Neural Network')\n",
-    "plt.show()\n",
     "plt.savefig('NNLift.png')"
    ]
   },
@@ -4745,13 +4771,6 @@
    "outputs": [],
    "source": [
     "#AIC score"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Compiled Lift Curve for Top Models"
    ]
   },
   {
