--- a/eda_merged_100323_Halee.ipynb
+++ b/eda_merged_100323_Halee.ipynb
@@ -955,6 +955,150 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>booking_status</th>\n",
+       "      <th>Canceled</th>\n",
+       "      <th>Not_Canceled</th>\n",
+       "      <th>All</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>arrival_year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2017</th>\n",
+       "      <td>0.026492</td>\n",
+       "      <td>0.153081</td>\n",
+       "      <td>0.179573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018</th>\n",
+       "      <td>0.301144</td>\n",
+       "      <td>0.519283</td>\n",
+       "      <td>0.820427</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>All</th>\n",
+       "      <td>0.327636</td>\n",
+       "      <td>0.672364</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "booking_status  Canceled  Not_Canceled       All\n",
+       "arrival_year                                    \n",
+       "2017            0.026492      0.153081  0.179573\n",
+       "2018            0.301144      0.519283  0.820427\n",
+       "All             0.327636      0.672364  1.000000"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(df['arrival_year'], df['booking_status'], margins = True, normalize = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Not_Canceled    0.852472\n",
+       "Canceled        0.147528\n",
+       "Name: booking_status, dtype: float64"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "year17 = df[df['arrival_year'] == 2017]\n",
+    "year17['booking_status'].value_counts()/len(year17)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Not_Canceled    0.632942\n",
+       "Canceled        0.367058\n",
+       "Name: booking_status, dtype: float64"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "year18 = df[df['arrival_year'] == 2018]\n",
+    "year18['booking_status'].value_counts()/len(year18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.219"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "year_cancel_diff = 0.367-0.148\n",
+    "year_cancel_diff"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4574,7 +4718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -4593,6 +4737,15 @@
       "│ Neural Network      │                 0.805068 │                 0.770248 │   0.781803 │             0.788  │\n",
       "╘═════════════════════╧══════════════════════════╧══════════════════════════╧════════════╧════════════════════╛\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -4608,7 +4761,11 @@
     " 'Accuracy': nn_acc_bal, 'Area Under Curve':auc_nn}]\n",
     "table = tabulate(val_performance, headers='keys', tablefmt='fancy_grid')\n",
     "# Display the comparison table\n",
-    "print(table)"
+    "print(table)\n",
+    "plt.savefig('val_table.png',\n",
+    "            bbox_inches='tight',\n",
+    "            dpi=150\n",
+    "            )"
    ]
   },
   {
